style.css
/* ... */
  .twitter-tweet {
    margin-left: auto;
    margin-right: auto;
    width: 100% !important;
}





































    /* Ipad Pro */
    @media (height:1366px) {
    /* FOOTER START */
    footer {
        position: relative;
        height: 700px;
        width: 100%;
        background-color: #333;
        margin-top: 564px;
        }

        .twitter-tweet {
            margin-left: auto;
            margin-right: auto;
            width: 60% !important;
        }
        /* FOOTER END */
    }




































































    /* Tablet */
@media (max-width: 1025px) and (min-width: 768px){
    body {
        background-color: #221f1f;
        margin: 0; 
        margin-bottom: 0px;
        padding: 0; 
        overflow-x: hidden;
    }
    
    .display-none {
        display: none;
    }

    /* NAVBAR START */
    .categories-button {
        width: 35px;
       /* padding-bottom: 7px;
       padding-left: 5px;
       cursor: pointer;
       padding-top: 5px;
       margin-left: 0px; */
       padding: 5px;
       margin-bottom: 1px;
       cursor: pointer;
   }

    .categories-window {
        position:relative;
        background-color: rgb(51, 51,51, 0.6);
        width: 180px;
        height: 250px;
   }

   a {
    color: white;
    text-decoration: none;
    font-size: 25px;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}


   ul {
       list-style-type: none;
       margin: 0;
       height: 45px;
   }

   .pos-absolute {
       position: relative;
       right: 56px
   }

   .navbar-image {
       width: 155px;
       /* padding-left: 10px;
       padding-right: 10px;
       margin: 0;
       padding-top: 0px;
       padding-bottom: 1px; */
       margin: 0;
       padding-top: 2px;
   }

   .search-icon {
       width: 25px;
       /* padding-bottom: 8px;
       margin-left: 0px;
       padding-left: 10px;
       margin-right: 0px; */
       margin: 0;
       padding: 5px;
       margin-bottom: 3px;
   }

   .navbar-space-search {
       display: inline;
       margin-left: 255px;
   }

   .navbar-space-categories {
       display: inline;
       margin-right: 255px;
   }


    /* POST START */
    .homepost-pos {
        position: relative;
    }
    
    .homepost {
        margin-top: 20px;
        margin-left: auto;
        margin-right: auto;
        background-color: #333;
        width: 740px;
        height: 690px;
        border-radius: 15px;
        display: block;
    }
    
    .hometext {
        color: white;
        font-family: Georgia, 'Times New Roman', Times, serif;
        font-weight: bold;
        font-size: 40px;
        margin: 0;
        width: 575px;
        text-align: center;
        height: 250px;
        padding-left:90px;
        padding-right: 75px;
        padding-bottom: 2px;
    }

    .homeimage {
        width: 740px;
        border-top-left-radius: 10px;
        border-bottom-left-radius: 0px;
        border-top-right-radius: 10px;
    }
    /* POST END */

    .post {
        margin-left: auto;
        margin-right: auto;
        background-color: #333;
        width: 742px;
        height: auto;
        padding-bottom: 75px;
    }
    
    .post-title {
        margin: 0;
        padding-top: 55px;
        padding-left: 10px;
        padding-right: 10px;
        margin-left: 10px;
        margin-right: 10px;
        margin-bottom: 15px;
        font-size: 35px;
        color: white;
        font-family: Georgia, 'Times New Roman', Times, serif;
        text-align: center;
    }
    
    .post-title-image {
        width: 700px;
        margin-left: 21px;
        margin-right: 21px;
    }
    
    .post-image {
        width: 600px;
        margin-left: 71px;
        margin-right: 71px;
    }

    .post-text-title {
        color: white;
        text-align: center;
        font-family: Arial, Helvetica, sans-serif;
        font-style:italic;
        font-weight: bold;
        font-size: 24px;
        margin-left: 35px;
        margin-right: 35px;
        padding-left: 10px;
        padding-right: 10px;
    }

    .post-text {
        text-align: center;
        color: white;
        padding-left: 20px;
        padding-right: 20px;
        margin-left: 20px;
        margin-right: 20px;
        margin-top: 20px;
        margin-bottom: 20px;
        font-size: 22px;
        font-family: Arial, Helvetica, sans-serif;
    }

    .post-writer-date {
            padding-top: 3px;
            text-align: center;
            font-size: 18px;
            color: yellow;
            background-color: #555;
            padding-bottom: 3px;
            margin-bottom: 20px;
        }

        iframe {
            width: 450px;
        }

        #myBtn {
            margin: 0;
            display: none;
            position: fixed;
            bottom: 30px;
            right: 20px;
            z-index: 99;
            font-size: 25px;
            border: none;
            outline: none;
            background-color: rgb(255, 255, 0, 0.8);
            color: black;
            cursor: pointer;
            padding-left: 12px;
            padding-right: 12px;
            padding-top: 8px;
            padding-bottom: 0px;
            border-radius: 4px;
            scroll-behavior: smooth;
          }
          
          
          #myBtn:hover {
            background-color: #555;
          }

          /* FOOTER START */
          footer {
            position: relative;
            height: 350px;
            width: 100%;
            background-color: #333;
            margin-top: 564px;
          }
          /* FOOTER END */

          .twitter-tweet {
            margin-left: auto;
            margin-right: auto;
            width: 60% !important;
        }
    }
/* ... */

